--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "semantic-ui-react": "^0.82.5",
+    "url-parse": "^1.4.3",
     "whatwg-fetch": "^2.0.4"
   },
   "scripts": {
