--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "http://danimeko.github.io/tv-series",
   "dependencies": {
     "gh-pages": "^2.0.1",
+    "lodash": "^4.17.11",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router": "^4.3.1",
